<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    android:background="@color/colorPrimary_700"
    tools:context="com.sonda.emsysmobile.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="@dimen/field_width_normal"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:paddingLeft="@dimen/spacing_small"
            android:paddingRight="@dimen/spacing_small"
            android:textColor="@color/colorPrimary_900"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_username"
            android:background="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:paddingLeft="@dimen/spacing_small"
            android:paddingRight="@dimen/spacing_small"
            android:textColor="@color/colorPrimary_900"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_password"
            android:background="@color/white"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/action_login"
            style="@style/AppButtonDark"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_large"
        android:indeterminate="true"
        android:visibility="gone"
        style="?android:attr/progressBarStyle" />

</RelativeLayout>
